<resources>
    <string name="ime_name">SKK for Android</string>
    <string name="label_pref_activity">SKK for Androidの設定</string>
    <string name="label_dict_manager_activity">SKK 辞書管理</string>
    <string name="label_dict_tool_activity">ユーザー辞書ツール</string>
    <string name="label_ascii_tool_activity">ASCII 辞書ツール</string>
    <string name="label_emoji_tool_activity">絵文字辞書ツール</string>
    <string name="label_symbol_tool_activity">記号辞書ツール</string>
    <string name="label_pref_hard_keyboard">ハードウェアキーボードの設定</string>
    <string name="label_pref_soft_keyboard">ソフトウェアキーボードの設定</string>
    <string name="label_dict_manager_reset">辞書を初期化</string>
    <string name="label_dict_tool_recreate">ユーザー辞書の初期化</string>
    <string name="label_ascii_tool_recreate">ASCII 辞書の初期化</string>
    <string name="label_emoji_tool_recreate">絵文字辞書の初期化</string>
    <string name="label_symbol_tool_recreate">記号辞書の初期化</string>
    <string name="label_log_viewer">ログの表示</string>
    <string name="label_dict_manager_optional_dict">SKK 追加辞書</string>
    <string name="label_dict_manager_add">辞書を追加</string>
    <string name="label_dict_manager_uninstall">削除</string>
    <string name="label_dict_manager_input_name">辞書の名前を入力</string>
    <string name="label_tools_import">インポート</string>
    <string name="label_tools_export">エクスポート</string>
    <string name="label_tools_initialize">初期辞書に戻す</string>
    <string name="label_tools_clear">全消去</string>
    <string name="label_tools_no_entry_found">エントリがありません</string>
    <string name="label_kana_rule_manager_activity">SKK ローマ字かな変換ルール</string>
    <string name="label_flick_rule_manager_activity">フリックキーボード定義</string>
    <string name="label_kana_rule_select">ファイルを選択</string>
    <string name="label_kana_rule_azik">AZIK 風ルールで上書き</string>
    <string name="label_kana_rule_clear">初期化</string>
    <string name="label_push_any">キーを押してください</string>
    <string name="label_disabled_key">(無効)</string>
    <string name="label_mushroom">マッシュルーム</string>
    <string name="descr_close_button">閉じる</string>
    <string name="descr_left_button">左</string>
    <string name="descr_right_button">右</string>
    <string name="item_tools_entry">%1$s %2$s</string>
    <string name="message_tools_confirm_remove_entry">このエントリを削除しますか？</string>
    <string name="message_tools_confirm_clear">現在の辞書の内容はすべて消去されます。よろしいですか？</string>
    <string name="message_tools_written_to_external_storage">辞書をテキスト形式で保存しました: %1$s</string>
    <string name="message_dict_manager_confirm_clear">辞書置き場のファイルをまとめて削除します。よろしいですか？\n%1$s</string>
    <string name="message_dict_manager_confirm_remove_dict">この辞書を削除しますか？</string>
    <string name="message_dict_manager_confirm_download_dict">SKK %s 辞書をダウンロードしますか？</string>
    <string name="message_extracting_dict">辞書を解凍しています…</string>
    <string name="message_dict_extracted">辞書を解凍しました</string>
    <string name="message_dict_migrating">辞書を新形式に移行しています</string>
    <string name="message_confirm_load_azik_rule">現在の変換ルールを AZIK 風の設定で上書きしますか？</string>
    <string name="message_confirm_clear_kana_rule">ローマ字かな変換ルールをデフォルトに戻しますか？</string>
    <string name="message_confirm_clear_flick_rule">フリックキーボードをデフォルトに戻しますか？</string>
    <string name="hint_kana_rule_editor">#コメント\nka,か\nna,な</string>
    <string name="hint_flick_rule_editor">#コメント\nキー番号,キーラベル,ラベル0,アクション0,ラベル1,アクション1,…</string>
    <string name="error_kana_rule_load">ファイルを読み込めませんでした</string>
    <string name="error_access_failed">アクセスできません: %1$s</string>
    <string name="error_open_dict">辞書ファイルを開けません</string>
    <string name="error_open_user_dict">辞書 %1$s が開けませんでした。引き続きキーボードが表示されない場合は設定画面から初期化してみてください</string>
    <string name="error_tools_open_user_dict">辞書を開くときにエラーが発生しました。内容をすべて消去してもよろしいですか？</string>
    <string name="error_file_load">ファイル読みこみに失敗しました: %1$s</string>
    <string name="error_no_mushroom">マッシュルームアプリがひとつもインストールされていません</string>
    <string name="error_write_to_external_storage">テキスト形式の保存に失敗しました: %1$s</string>
    <string name="error_text_dict_coding">UTF-8のファイルではないようです</string>
    <string name="error_dict_exists">この辞書はすでに存在します: %1$s\n削除しますか？</string>
    <string name="error_extracting_dict_failed">辞書の解凍に失敗しました。一旦アンインストールしてみてください</string>
    <string name="error_pasting_forbidden">貼り付け機能はソフトウェアキーボードの設定で無効化されています</string>
    <string name="error_invalid_image">この画像は使用できません</string>
    <string name="pref_kutouten_type" translatable="false">PrefKeyKutoutenType</string>
    <string name="pref_font" translatable="false">PrefKeyFont</string>
    <string name="pref_prefix_mark" translatable="false">PrefKeyPrefixMark</string>
    <string name="pref_candidates_size" translatable="false">PrefKeyCandidatesSize</string>
    <string name="pref_fuzzy_suggestion" translatable="false">PrefKeyFuzzySuggestion</string>
    <string name="pref_fuzzier_suggestion" translatable="false">PrefKeyFuzzierSuggestion</string>
    <string name="pref_complete_okuri" translatable="false">PrefKeyCompleteOkuri</string>
    <string name="pref_candidates_normal_lines" translatable="false">PrefKeyCandidatesNormalLines</string>
    <string name="pref_candidates_emoji_lines" translatable="false">PrefKeyCandidatesEmojiLines</string>
    <string name="pref_candidates_min_height" translatable="false">PrefKeyCandidatesMinHeight</string>
    <string name="pref_candidates_reserve_lines" translatable="false">PrefKeyCandidatesReserveLines</string>
    <string name="pref_log_privacy" translatable="false">PrefKeyLogPrivacy</string>
    <string name="pref_log_viewer" translatable="false">PrefLogViewer</string>
    <string name="pref_use_candidates_view" translatable="false">PrefKeyUseCandidatesView</string>
    <string name="pref_kana_key" translatable="false">PrefKeyKanaKey2</string>
    <string name="pref_toggle_kana_key" translatable="false">PrefKeyToggleKanaKey</string>
    <string name="pref_cancel_key" translatable="false">PrefKeyCancelKey2</string>
    <string name="pref_katakana_key" translatable="false">PrefKeyKatakanaKey</string>
    <string name="pref_ascii_key" translatable="false">PrefKeyASCIIKey</string>
    <string name="pref_zenkaku_key" translatable="false">PrefKeyZenkakuKey</string>
    <string name="pref_abbrev_key" translatable="false">PrefKeyAbbrevKey</string>
    <string name="pref_hankaku_kana_key" translatable="false">PrefKeyHankakuKanaKey</string>
    <string name="pref_sticky_meta" translatable="false">PrefKeyStickyMeta</string>
    <string name="pref_sands" translatable="false">PrefKeySandS</string>
    <string name="pref_sands_in_ascii" translatable="false">PrefKeySandSInAscii</string>
    <string name="pref_nav_line_start_key" translatable="false">PrefKeyNavLineStartKey</string>
    <string name="pref_nav_line_end_key" translatable="false">PrefKeyNavLineEndKey</string>
    <string name="pref_nav_forward_key" translatable="false">PrefKeyNavForwardKey</string>
    <string name="pref_nav_backward_key" translatable="false">PrefKeyNavBackwardKey</string>
    <string name="pref_emacs_nav_in_ascii" translatable="false">PrefKeyEmacsNavInAscii</string>
    <string name="pref_use_soft_key" translatable="false">PrefKeyUseSoftKey</string>
    <string name="pref_show_status_icon" translatable="false">PrefKeyShowStatusIcon</string>
    <string name="pref_use_popup" translatable="false">PrefKeyUsePopup</string>
    <string name="pref_popup_on_press" translatable="false">PrefKeyPopupOnPress</string>
    <string name="pref_fixed_popup" translatable="false">PrefKeyFixedPopup</string>
    <string name="pref_finger_offset" translatable="false">PrefKeyFingerOffset</string>
    <string name="pref_use_small_k" translatable="false">PrefKeyUseSmallK</string>
    <string name="pref_long_press_timeout" translatable="false">PrefKeyLongPressTimeout</string>
    <string name="pref_mini_keyboard" translatable="false">PrefKeyUseMiniKey</string>
    <string name="pref_flick_sensitivity" translatable="false">PrefKeyFlickSensitivity</string>
    <string name="pref_gesture_insets" translatable="false">PrefKeyGestureInsets</string>
    <string name="pref_key_label_zoom" translatable="false">PrefKeyKeyZoom</string>
    <string name="pref_key_height_port" translatable="false">PrefKeyKeyHeightPort</string>
    <string name="pref_key_height_land" translatable="false">PrefKeyKeyHeightLand</string>
    <string name="pref_key_width_port" translatable="false">PrefKeyKeyWidthPort</string>
    <string name="pref_key_width_land" translatable="false">PrefKeyKeyWidthLand</string>
    <string name="pref_key_center_port" translatable="false">PrefKeyKeyCenterPort</string>
    <string name="pref_key_center_land" translatable="false">PrefKeyKeyCenterLand</string>
    <string name="pref_key_padding_bottom" translatable="false">PrefKeyKeyPaddingBottom</string>
    <string name="pref_key_width_qwerty_zoom" translatable="false">PrefKeyKeyWidthQwertyZoom</string>
    <string name="pref_theme" translatable="false">PrefKeyTheme</string>
    <string name="pref_use_inset" translatable="false">PrefKeyInset</string>
    <string name="pref_background_alpha" translatable="false">PrefKeyBackgroundAlpha</string>
    <string name="pref_background_image" translatable="false">PrefKeyBackgroundImage</string>
    <string name="pref_background_image_alpha" translatable="false">PrefKeyBackgroundImageAlpha</string>
    <string name="pref_ignore_high_contrast" translatable="false">PrefKeyOriginalColor</string>
    <string name="pref_type_uri" translatable="false">PrefKeyTypeURI</string>
    <string name="pref_type_number" translatable="false">PrefKeyTypeNumber</string>
    <string name="pref_type_phone" translatable="false">PrefKeyTypePhone</string>
    <string name="pref_type_password" translatable="false">PrefKeyTypePassword</string>
    <string name="pref_type_text" translatable="false">PrefKeyTypeText</string>
    <string name="pref_haptic" translatable="false">PrefKeyHaptic</string>
    <string name="pref_over_edge" translatable="false">PrefKeyOverEdge</string>
    <string name="pref_forbid_paste" translatable="false">PrefKeyForbidPaste</string>
    <string name="pref_use_del" translatable="false">PrefKeyUseDel</string>
    <string name="pref_soft_keyboard_type" translatable="false">PrefKeySoftKeyboardType</string>
    <string name="menu_flick_rule_load_godan">Godanを読み込む</string>
    <string name="menu_flick_rule_load_godan_simple">簡易表示 Godan を読み込む</string>
    <string name="message_confirm_load_godan_rule">Godanのフリックルールを読み込みますか？\n(現在の設定は上書きされます)</string>
    <string name="message_confirm_delete_godan_keys">キーを減らします。キー 20 以降をすべて削除してよろしいですか？</string>
    <string name="message_confirm_delete_ascii_section">ASCII セクションをすべて削除してよろしいですか？</string>
    <string name="label_use_godan">キーを増やす</string>
    <string name="label_enable_ascii">ASCII を有効化</string>
    <string name="label_gui_mode">GUIモード</string>
    <string name="label_text_mode">テキストモード</string>
    <string name="label_section_main">通常</string>
    <string name="label_section_number">10キー</string>
    <string name="label_section_voice">声</string>
    <string name="label_section_ascii">ASCII</string>
    <string name="label_shift_toggle">シフト</string>
    <string name="label_main_key_label">上書きキーラベル</string>
    <string name="hint_main_key_label">ガイドから自動生成</string>
    <string name="label_normal_state">通常時</string>
    <string name="label_shifted_state">シフト時</string>
    <string name="label_flick_label">ガイド</string>
    <string name="label_flick_action">アクション</string>
    <string name="hint_flick_action">ガイドを直接入力</string>
    <string name="label_save">保存</string>
    <string name="dict_name_user" translatable="false">skk_userdict</string>
    <string name="dict_name_ascii" translatable="false">skk_asciidict</string>
    <string name="dict_name_emoji" translatable="false">skk_emojidict</string>
    <string name="dict_name_user_recreate" translatable="false">*skk_userdict</string>
    <string name="dict_name_ascii_recreate" translatable="false">+skk_asciidict</string>
    <string name="dict_name_emoji_recreate" translatable="false">+skk_emojidict</string>
</resources>