<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/label_pref_hard_keyboard">
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:summary="変更すると，ソフトウェアキーボードが正常に動作しない場合があります"
            app:title="@string/label_kana_rule_manager_activity">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="jp.deadend.noname.skk.SKKKanaRuleManager"
                android:targetPackage="jp.deadend.noname.skk" />
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_kana_key"
            app:title="かなキー" />
        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="@string/pref_toggle_kana_key"
            app:summary="オンだと，かなモードでかなキーを押すと ASCII モードに戻ります"
            app:title="かなキーを ASCII とのトグルに" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_cancel_key"
            app:title="キャンセルキー" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_katakana_key"
            app:title="カタカナキー (SHIFT+ で▽開始)" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_ascii_key"
            app:title="ASCIIキー" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_zenkaku_key"
            app:title="全角英数キー" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_abbrev_key"
            app:title="Abbrevキー" />
        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_hankaku_kana_key"
            app:title="半角カナキー" />
        <androidx.preference.CheckBoxPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/pref_use_candidates_view"
            app:summary="補完候補や変換候補を一覧表示します"
            app:title="補完・候補の一覧表示" />
        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="@string/pref_sticky_meta"
            app:summary="押しっぱなしでなくてもシフトを有効にします (2回でロック)"
            app:title="固定シフトキー" />
        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="@string/pref_sands"
            app:summary="スペースキーをシフトとして使います"
            app:title="SandS" />
        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:dependency="@string/pref_sands"
            app:key="@string/pref_sands_in_ascii"
            app:summary="オフにすると ASCII モードではアプリ側にキーを渡します"
            app:title="ASCII モードでも SandS を有効にする" />
        <androidx.preference.PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="Emacs 風のナビキー">
            <androidx.preference.Preference
                app:iconSpaceReserved="false"
                app:key="@string/pref_nav_line_start_key"
                app:title="行頭キー" />
            <androidx.preference.Preference
                app:iconSpaceReserved="false"
                app:key="@string/pref_nav_line_end_key"
                app:title="行末キー" />
            <androidx.preference.Preference
                app:iconSpaceReserved="false"
                app:key="@string/pref_nav_forward_key"
                app:title="一文字進むキー" />
            <androidx.preference.Preference
                app:iconSpaceReserved="false"
                app:key="@string/pref_nav_backward_key"
                app:title="一文字戻るキー" />
            <androidx.preference.CheckBoxPreference
                app:defaultValue="false"
                app:iconSpaceReserved="false"
                app:key="@string/pref_emacs_nav_in_ascii"
                app:summary="オフにすると ASCII モードではアプリ側にキーを渡します"
                app:title="ASCII モードでもナビキーを有効にする" />
        </androidx.preference.PreferenceCategory>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
