<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/label_pref_activity">
    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="種類別設定">
        <androidx.preference.Preference
            app:fragment="jp.deadend.noname.skk.SKKSettingsActivity$SettingsHardKeyFragment"
            app:icon="@android:drawable/ic_menu_manage"
            app:title="@string/label_pref_hard_keyboard" />
        <androidx.preference.Preference
            app:fragment="jp.deadend.noname.skk.SKKSettingsActivity$SettingsSoftKeyFragment"
            app:icon="@android:drawable/ic_menu_manage"
            app:title="@string/label_pref_soft_keyboard" />
        <androidx.preference.Preference
            app:fragment="jp.deadend.noname.skk.SKKSettingsActivity$SettingsCommonFragment"
            app:icon="@android:drawable/ic_menu_manage"
            app:title="共通設定" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="SKK 辞書管理">
        <androidx.preference.Preference
            app:icon="@android:drawable/ic_input_add"
            app:title="システム辞書の管理">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="jp.deadend.noname.skk.SKKDictManager"
                android:targetPackage="jp.deadend.noname.skk" />
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:icon="@android:drawable/ic_menu_manage"
            app:title="@string/label_dict_tool_activity">
            <intent
                android:action="android.intent.action.MAIN"
                android:data="@string/dict_name_user"
                android:targetClass="jp.deadend.noname.skk.SKKUserDictTool"
                android:targetPackage="jp.deadend.noname.skk" />
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:icon="@android:drawable/ic_menu_manage"
            app:title="@string/label_ascii_tool_activity">
            <intent
                android:action="android.intent.action.MAIN"
                android:data="@string/dict_name_ascii"
                android:targetClass="jp.deadend.noname.skk.SKKUserDictTool"
                android:targetPackage="jp.deadend.noname.skk" />
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:icon="@android:drawable/ic_menu_manage"
            app:title="@string/label_emoji_tool_activity">
            <intent
                android:action="android.intent.action.MAIN"
                android:data="@string/dict_name_emoji"
                android:targetClass="jp.deadend.noname.skk.SKKUserDictTool"
                android:targetPackage="jp.deadend.noname.skk" />
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/label_dict_manager_reset">
        <androidx.preference.Preference
            app:icon="@android:drawable/ic_notification_clear_all"
            app:summary="何も登録されていない状態にします"
            app:title="@string/label_dict_tool_recreate">
            <intent
                android:action="android.intent.action.MAIN"
                android:data="@string/dict_name_user_recreate"
                android:targetClass="jp.deadend.noname.skk.SKKUserDictTool"
                android:targetPackage="jp.deadend.noname.skk" />
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:icon="@android:drawable/ic_notification_clear_all"
            app:summary="初期辞書だけの状態にします"
            app:title="@string/label_ascii_tool_recreate">
            <intent
                android:action="android.intent.action.MAIN"
                android:data="@string/dict_name_ascii_recreate"
                android:targetClass="jp.deadend.noname.skk.SKKUserDictTool"
                android:targetPackage="jp.deadend.noname.skk" />
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:icon="@android:drawable/ic_notification_clear_all"
            app:summary="初期辞書だけの状態にします"
            app:title="@string/label_emoji_tool_recreate">
            <intent
                android:action="android.intent.action.MAIN"
                android:data="@string/dict_name_emoji_recreate"
                android:targetClass="jp.deadend.noname.skk.SKKUserDictTool"
                android:targetPackage="jp.deadend.noname.skk" />
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/label_log_viewer">
        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:icon="@android:drawable/ic_lock_lock"
            app:key="@string/pref_log_privacy"
            app:summary="オンにすると変換内容など個人情報を含むクラッシュログを残します"
            app:title="詳細なデバッグ情報の記録" />
        <androidx.preference.Preference
            app:icon="@android:drawable/ic_dialog_alert"
            app:key="@string/pref_log_viewer"
            app:summary="最新のクラッシュ記録があれば表示され，再度タップでコピーできます"
            app:title="ここをタップ" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
